--- a/page.css
+++ b/page.css
@@ -93,7 +93,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.8rem 1rem 0.8rem 3rem; 
+  padding: 0.8rem 2.2rem 0.8rem 3rem; 
   width: 100%;
   user-select: none;
   h4 {
@@ -182,6 +182,9 @@ body {
   }
 }
 
+.pre-note {
+  color: #252728;
+}
 /*tab mode*/
 @media only screen and (min-width: 481px) and (max-width: 1024px){
   body {
