--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ h3 {
 h4 {
   font-size: 1rem;
 }
-h5, p {
+h5, p, span {
   font-size: 0.875rem;
 }
 
@@ -107,11 +107,19 @@ a {
 }
 
 .togglemobile {
+  position: relative;
   top: 0rem;
   height: 4rem;
   align-items: center;
 }
-
+.togglemobile::after
+{
+  position: absolute;
+  bottom: 0;
+  content: "";
+  width: calc(100% - 2rem);
+  border-bottom: 2px solid var(--mainblue);
+}
 .toggledesktop {
   top: 4rem;
   display: none;
@@ -164,23 +172,48 @@ a {
   -ms-transform: translateX(1.5rem);
   transform: translateX(1.5rem);
 }
-
-.header-icons {
+.applogo {
+  content: url(assets/ico/light-mode/logoonly-blue.svg);
   width: 2rem;
   margin-left: 0.8rem;
 }
-.applogo {
-  content: url(assets/ico/light-mode/logoonly-blue.svg);
+.applogo-d {
+  content: url(assets/ico/brand/logo-name.svg);
+  height: 1rem;
+  margin-left: 0.8rem;
+  display: none;
 }
-
-.search-btn {
+.search {
+  display: flex;
+  height: 2.5rem;
+  justify-content: flex-end;
+  margin: 1rem;
+}
+.search-desktop {
+  display: none;
   position: absolute;
-  right: 0;
-  margin-right: 1rem;
-  width: 2rem;
-  content: url(assets/ico/light-mode/search-blue.svg);
+  left: 0;
+  top: 7rem;
+  height: 2.5rem;
+  width: 25%;
+  justify-content: flex-end;
+  margin: 1rem 0;
+  padding: 0 1rem;
 }
-
+.search-bar {
+  padding: 0.5rem;
+  padding-left: 1.25rem;
+  border: none;
+  background-color: #F3F4F6;
+  border-radius: 1.25rem;
+  width: 100%;
+}
+.search-bar:focus {
+  outline-style: solid;
+  outline-color: var(--mainblue);
+  outline-width: thin;
+  outline-offset: -1px;
+}
 /*sidebar starts here*/
 
 .mobile-sidebar {
@@ -190,9 +223,9 @@ a {
   z-index: 2;
   display: block;
   white-space: nowrap;
-  height: 100%;
+  height: 100vh;
   width: 0;
-  background-color: #f4f4f4;
+  background-color: white;
   transition: 0.2s ease-out;
   overflow-x: hidden;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2)
@@ -205,7 +238,7 @@ a {
 }
 .desktop-sidebar {
   position: fixed;
-  top: 7rem;
+  top: 10.5rem;
   left: 0;
   z-index: 2;
   display: none;
@@ -226,6 +259,7 @@ a {
 }
 .nav-list {
   padding: 0 1rem;
+  margin-bottom: 2rem;
 }
 .list-header {
   position: relative;
@@ -238,7 +272,6 @@ a {
   }
 }
 .list-header:first-of-type {
-  border-top: 2px solid var(--mainblue);
   border-bottom: 2px solid var(--mainblue);
 }
 
@@ -297,10 +330,7 @@ a {
   pointer-events: none;
 }
 
-.sidebar-footer {
-  display: block;
-  height: 5vh;
-}
+
 /*sidebar ends here*/
 
 
@@ -311,7 +341,7 @@ a {
   i {
     content: url(assets/ico/light-mode/gct-blue.png);
     display: block;
-    width: 4rem;
+    width: 15%;
     margin: 0 auto;
     margin-bottom: 1rem;
   }
@@ -422,12 +452,19 @@ a {
 
   }
   .main-title {
+    display: flex;
     width: 75%;
-    img {
-      width: 60%;
-    }
+    min-height: fit-content;
+    padding: 0 10%;
     i {
-      width: 5rem;
+      display: inline-block;
+      width: 25%;
+      margin: 0;
+      margin-right: 5%;
+    }
+    img {
+      display: inline-block;
+      width: 70%;
     }
   }
   .main-page {
@@ -437,6 +474,12 @@ a {
   }
 
   .header {
+    .applogo {
+      display: none;
+    }
+    .applogo-d {
+      display: block;
+    }
     .school-name {
       display: block;
       margin-left: 0.8rem;
@@ -447,7 +490,9 @@ a {
   .toggledesktop {
     display: flex;
   }
-
+  .search-bar {
+    background-color: white;
+  }
   .section {
     width: 50%;
     padding: 0.5rem .5rem;
@@ -463,10 +508,10 @@ a {
   .sidebar-footer {
     height: 20vh;
   }
-  .search-btn {
-    width: 50px;
-  }
   .main-page .header-placeholder {
     height: 90px;
+  }
+  .search-desktop {
+    display: flex;
   }
 }
