--- a/page.css
+++ b/page.css
@@ -1,6 +1,67 @@
 body {
+  position: relative;
   background-image: url(assets/gallery/480p/mainbg-mobile.png);
   background-attachment: fixed;
+}
+.confirm-exit {
+  display: block;
+  position: fixed;
+  height: 10rem;
+  width: 20rem;
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-color: white;
+  border-radius: 0.3rem;
+  padding: 1rem;
+  margin: auto;
+  z-index: 2;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  .confirm-msg, .confirm-title {
+    /* background-color: red; */
+    height: 30%;
+    margin: 0 auto;
+    h3 {
+      color: #333399;
+    }
+    p {
+      font-family: "DM-Sans-Regular";
+    }
+  }
+  .control-btns {
+    /* background-color: blue; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 40%;
+    .c-button {
+      font-size: 0.875rem;
+      width: 45%;
+      height: 80%;
+      border: none;
+      border-radius: 0.3rem;
+      border: 1px solid #333399;
+      cursor: pointer;
+    }
+    .confirm {
+      background-color: #333399;
+      color: white;
+    }
+    .cancel {
+      background-color: white;
+      color: #333399;
+    }
+    .cancel:hover {
+      background-color: #f3f4f6;
+    }
+    .confirm:hover {
+      background-color: #7da7d9;
+    }
+  }
+}
+.main-page {
+  display: block;
+  height: 100vh;
+  overflow-y: scroll;
 }
 .process-header {
   position: relative;
@@ -16,38 +77,36 @@ body {
   img {
     content: url(assets/ico/light-mode/arrow-back.svg);
   }
-}
-
-.back-home {
-  color: inherit;
-  width: fit-content;
-  display: flex;
-  justify-content: flex-start;
-  padding: 0.2rem;
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 4px; 
-    img {
-      margin-right: 0.5rem;
+  .back-home {
+    color: inherit;
+    width: fit-content;
+    display: flex;
+    justify-content: flex-start;
+    padding: 0.2rem;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 4px; 
+      img {
+        margin-right: 0.5rem;
+      }
+      h3 {
+        font-family: "Poppins-Medium", Helvetica, sans-serif;
+      }
+  }
+  
+  .process-title {
+    color: inherit;
+    position: absolute;
+    bottom: 0;
+    user-select: none;
+    color: white;
+    h1 {
+      font-family: "Poppins-Bold", Helvetica, sans-serif;
     }
-    h3 {
-      font-family: "Poppins-Medium", Helvetica, sans-serif;
-    }
-}
-
-.process-title {
-  color: inherit;
-  position: absolute;
-  bottom: 0;
-  user-select: none;
-  color: white;
-  h1 {
-    font-family: "Poppins-Bold", Helvetica, sans-serif;
   }
 }
 
 .procedure {
   display: block;
-  width: 100%;
   margin: 0.4rem 0.8rem;
   user-select: none;
   h3 {
@@ -58,13 +117,10 @@ body {
     margin-left: 1rem;
   }
 }
-
 .step-container {
   display: block;
-  width: 100%;
   margin: 0 0.8rem;
 }
-
 .container {
   position: relative;
   background-color: white;
@@ -74,48 +130,91 @@ body {
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   margin: 1rem 0;
-  opacity: 0.3;
+  opacity: 0.2;
 }
 .container:first-of-type {
   margin-top: 0.1rem;
 }
-
 .accordion-header {
   border-radius: 8px 8px 8px 8px;
   background-color: #333399;
   display: flex;
   width: 100%;
   border-bottom: 0px solid black;
-}
-
-.accordion-label {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.8rem 2.2rem 0.8rem 3rem; 
-  width: 100%;
-  user-select: none;
-  h4 {
-    color: white;
-    font-family: "Poppins-Medium", Helvetica, sans-serif;
+  .accordion-label {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.8rem 2.2rem 0.8rem 3rem; 
+    width: 100%;
+    user-select: none;
+    h4 {
+      color: white;
+      font-family: "Poppins-Medium", Helvetica, sans-serif;
+    }
+  }
+  .accordion-label::before{
+    content: url(assets/ico/light-mode/unchecked-circle.svg);
+    left: 0.9rem;
+    top: 1rem;
+    position: absolute;
+    transform: scale(1.8);
+  }
+  .accordion-label::after {
+    content: url(assets/ico/light-mode/collapse-down.svg);
+    position: absolute;
+    top: 30%;
+    right: 0.3rem;
+    margin: 0rem 0.4rem;
+    transform: scale(1.3);
   }
 }
-.accordion-label::before{
-  content: url(assets/ico/light-mode/unchecked-circle.svg);
-  left: 0.9rem;
-  top: 1rem;
-  position: absolute;
-  transform: scale(1.8);
+.accordion-panel {
+  margin: 0 0;
+  max-height: 0;
+  display: block;
+  overflow: hidden;
+  padding: 0 1rem;
+  transition: all 0.3s ease-out;
+  color: #252728;
+  .nav-button {
+    padding: 1rem 0rem;
+    display: flex;
+    justify-content: flex-end;
+    button {
+      font-family: "Poppins-Medium", Helvetica, sans-serif;
+      font-size: 0.8rem;
+      margin-right: 0.5rem;
+      padding: 0.2rem 1rem;
+    }
+    button:last-of-type {
+      margin: 0;
+    }
+    .next-button {
+      border-style: none;
+      border-radius: 5px;
+      background-color: #333399;
+      color: white;
+      cursor: pointer;
+    }
+    .back-button {
+      border: 2px solid #333399;
+      border-radius: 5px;
+      background-color: white;
+      color: #333399;
+      cursor: pointer;
+    }
+    .finish-button {
+      border-style: none;
+      border-radius: 5px;
+      background-color: rgb(56, 130, 56);
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
-.accordion-label::after {
-  content: url(assets/ico/light-mode/collapse-down.svg);
-  position: absolute;
-  top: 30%;
-  right: 0.3rem;
-  margin: 0rem 0.4rem;
-  transform: scale(1.3);
-}
+/*toggle classes*/
 .active {
   opacity: 1;
   .accordion-header {
@@ -127,63 +226,21 @@ body {
     top: 15%;
   }
 }
-.accordion-panel {
-  margin: 0 0;
-  max-height: 0;
-  display: block;
-  overflow: hidden;
-  padding: 0 1rem;
-  transition: all 0.3s ease-out;
-  color: #252728;
-}
-
-.nav-button {
-  padding: 1rem 0rem;
-  display: flex;
-  justify-content: flex-end;
-  button {
-    font-family: "Poppins-Medium", Helvetica, sans-serif;
-    font-size: 0.8rem;
-    margin-right: 0.5rem;
-    padding: 0.2rem 1rem;
-  }
-  button:last-of-type {
-    margin: 0;
-  }
-}
-
-.next-button {
-  border-style: none;
-  border-radius: 5px;
-  background-color: #333399;
-  color: white;
-  cursor: pointer;
-}
-
-.back-button {
-  border: 2px solid #333399;
-  border-radius: 5px;
-  background-color: white;
-  color: #333399;
-  cursor: pointer;
-}
-
-.finish-button {
-  border-style: none;
-  border-radius: 5px;
-  background-color: rgb(56, 130, 56);
-  color: white;
-  cursor: pointer;
-}
-
 .done {
   .accordion-label::before{
     content: url(assets/ico/light-mode/checked-circle.svg);
   }
 }
-
+.disable {
+  > *:not(:first-child) {
+    opacity: 0.3;
+    pointer-events: none;
+  }
+}
+/*---------------*/
 .pre-note {
   color: #252728;
+  display: block;
 }
 /*tab mode*/
 @media only screen and (min-width: 481px) and (max-width: 1024px){
@@ -204,8 +261,17 @@ body {
     background-image: url(assets/gallery/1152p/mainbg-desktop.png);
     display: block;
   }
+  .confirm-exit {
+    .control-btns {
+      justify-content: flex-end;
+      .c-button {
+        width: 30%;
+        height: 60%;
+        margin-left: 1rem;
+      }
+    }
+  }
   .process-header {
-    width: 50%;
     margin: 0 auto;
     background-image: url(assets/gallery/1152p/processheader-desktop.png);
     img {
@@ -215,7 +281,6 @@ body {
 
   .procedure {
     display: block;
-    width: 100%;
     margin: 0.6rem 1.2rem;
     font-family: "Poppins-Medium", Helvetica, sans-serif;
   }
