revert back to default gct logo

--- a/darkmode.css
+++ b/darkmode.css
@@ -96,9 +96,9 @@
   }
 /*main*/
   .main-title {
-    i {
+    /* i {
       filter: var(--gold);
-    }
+    } */
     img {
       filter: var(--gold); 
     }
