--- a/glossary/glossary.css
+++ b/glossary/glossary.css
@@ -146,7 +146,7 @@ body {
   padding-top: 0rem;
   padding: 0 0.875rem;
   padding-bottom: 0.875rem;
-  font-family: "DM-Sans-Regular";
+  font-family: "DM-Sans-Regular", sans-serif;
   color: var(--dark-palette);
   transition: 0.4s ease-in;
 }
