minor visual adjustments

--- a/content.css
+++ b/content.css
@@ -14,7 +14,7 @@
     font-family: "DM-Sans-Regular", sans-serif;
   }
   a {
-    color: var(--subblue);
+    color: var(--mainblue);
   }
   h5 {
   font-size: 0.875rem;
