quality of life updates

--- a/darkmode.css
+++ b/darkmode.css
@@ -249,6 +249,14 @@
       }
     }
   }
+  .content {
+    a {
+      color: var(--gold-palette);
+    }
+  }
+  .elink {
+    filter: var(--gold);
+  }
 
   /*=-=-=-=-=-=-=-=-USER MANUAL CSS=-=-=-=-=-=-=-=-=-=-*/
   .manual-page {
