--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
   padding: 0;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Poppins-Regular", Helvetica, sans-serif;
 }
 
@@ -40,7 +40,7 @@ h4 {
   font-size: 1rem;
 }
 h5, p, span {
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 
 
@@ -278,7 +278,7 @@ a {
     border-radius: 6px;
     cursor: pointer;
     list-style-position: inside;
-    margin: 0.5rem 0;
+    /* margin: 0.5rem 0; */
     -webkit-transition: .3s;
     transition: .3s;
     a {
