--- a/main.css
+++ b/main.css
@@ -162,6 +162,26 @@ a {
   margin-right: 0.8rem;
   right: 0;
 }
+.app-dl {
+  display: flex;
+  align-items: center;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.7rem;
+  background-color: #333399;
+  span {
+    margin-top: 0.1rem;
+    color: #f3f4f6;
+    font-size: 1rem;
+    font-family: "Poppins-Medium";
+  }
+  position: absolute;
+  right: 4rem;
+}
+.android-icon {
+  margin-left: 0.4rem;
+  content: url(assets/ico/light-mode/android-icon.svg);
+  height: 2rem;
+}
 .search {
   display: flex;
   height: 2.5rem;
